# BDIFF

./: .gitignore  CHANGELOG.md  config.example.yaml  pyproject.toml
.atl/: .skill-registry.cache.json  skill-registry.md
.github/workflows/: ci.yml
.ospec/cache/: skill-registry.cache.json
.ospec/session/: latest.md
docs/: roadmap.md  roadmap_v2.md
docs/architecture/: technical-baseline.md
docs/architecture/decisions/: README.md
docs/product/: brief.md  functional-scope.md  glossary.md
docs/references/processed/: README.md
docs/references/raw/: README.md
examples/: demo_fictitious_comparison.py
openspec/: config.yaml
openspec/changes/connection-profile-config/: apply-progress.md  state.yaml  tasks.md
openspec/changes/provider-postgresql/: proposal.md  tasks.md
openspec/changes/provider-sqlite/: design.md  exploration.md  proposal.md  tasks.md  verify-report.md
openspec/changes/reports-output-directory/: apply-progress.md  state.yaml
openspec/changes/tui-interactive-actions/: proposal.md  state.yaml  tasks.md
openspec/specs/cli-distribution/: spec.md
openspec/specs/interactive-tui/: spec.md
openspec/specs/reporting-and-output/: spec.md
src/schema_comparator/: __init__.py  cli.py
src/schema_comparator/application/: __init__.py
src/schema_comparator/compare/: __init__.py  consolidation.py  engine.py  errors.py  models.py
src/schema_comparator/config/: __init__.py  connection_string.py  errors.py  loader.py  models.py
src/schema_comparator/connectors/: __init__.py
src/schema_comparator/discovery/: __init__.py  errors.py  filters.py  models.py  queries.py  service.py
src/schema_comparator/domain/: __init__.py  capabilities.py  errors.py
src/schema_comparator/infrastructure/: __init__.py
src/schema_comparator/report/: __init__.py  attributes.py  console.py  excel.py  html.py  pdf.py  presentation.py  rows.py  write.py
src/schema_comparator/tui/: __init__.py  actions.py  app.py  decision_screen.py  formatting.py  (+2 more)
tests/integration/: test_extraction_live.py  test_run_comparison_procedures.py  test_structure_smoke.py  test_write_reports.py
tests/unit/: test_cli.py  test_filter_excluded_tables_preserves_procedures.py  test_import_smoke.py  test_procedures.py
(+177 files in other folders)
