[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "schema-comparator"
version = "1.2.4"

description = "SQL Server schema-drift comparator across microservices."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "PyYAML>=6.0",
    "pyodbc>=5.0",
    "Jinja2>=3.1",
    "xhtml2pdf>=0.2.13",
    "textual>=0.60",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
sqlserver = [
    "pyodbc>=5.0",
]
postgresql = [
    "psycopg[binary]>=3.1",
]
mysql = [
    "pymysql>=1.1",
]
mariadb = [
    "pymysql>=1.1",
]
oracle = [
    "oracledb>=2.0",
]
all = [
    "pyodbc>=5.0",
    "psycopg[binary]>=3.1",
    "pymysql>=1.1",
    "oracledb>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.12",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
